@@ -22,6 +22,8 @@ Version 1.3
 
 - Enhanced reStructuredText highlighting.
 
+- Added support for PHP 5.3 namespaces in the PHP lexer.
+
 - Fixed a bug in `do_insertions()` used for multi-lexer languages.
 
 - Fixed a Ruby regex highlighting bug (#476).
